deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: horse
  name: horse
spec:
  replicas: 3
  selector:
    matchLabels:
      run: horse
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: horse
    spec:
      containers:
      - image: klyno/friday.horse:2018-02-17-2
        imagePullPolicy: IfNotPresent
        name: horse
        ports:
        - containerPort: 80
          protocol: TCP
      - image: klyno/friday.horse:2018-02-16-4
        imagePullPolicy: IfNotPresent
        command: [ "/root/ascii-friday" ]
        name: txt
        ports:
        - containerPort: 8080
          protocol: TCP
