horse-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: horse
  name: horse-txt
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: horse
  sessionAffinity: None
  type: ClusterIP
