ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: friday-prod
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - friday.horse
    - www.friday.horse
    secretName: friday-prod-tls
  rules:
  - host: www.friday.horse
    http:
      paths:
      - path: /
        backend:
          serviceName: horse
          servicePort: 80
  - host: friday.horse
    http:
      paths:
      - path: /
        backend:
          serviceName: horse
          servicePort: 80
