tg-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: friday-tg
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /tg.html
spec:
  tls:
  - hosts:
    - tg.friday.horse
    secretName: friday-tg-tls
  rules:
  - host: tg.friday.horse
    http:
      paths:
      - path: /
        backend:
          serviceName: horse
          servicePort: 80
